2001-03-07  Havoc Pennington  <hp@redhat.com>

	* gtk/testgtk.c (create_spins): uglify so that size request gets
	tested.

	* gtk/gtkspinbutton.c (gtk_spin_button_size_request): Base size
	request on values for upper/lower, completes #6152

Wed Mar  7 20:07:22 2001  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am: Remove gtk-config-2.0 again.
	(Grrrr, pkg-config. And stops make loops.)

Thu Mar  8 00:18:29 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtksignal.[hc]: removed old emission hook API.
	
	* docs/Changes-2.0.txt: fixed sections.
	
	* gtk/gtktextbuffer.c: signal arg fixups.

2001-03-07  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextview.c (invalidated_handler): use PRIORITY_VALIDATE

	* gtk/gtktextview.h (GTK_TEXT_VIEW_PRIORITY_VALIDATE): add this
	here, bug #50368; changed to be GDK_PRIORITY_REDRAW + 5, instead
	of GDK_PRIORITY_REDRAW + 1, so you can insert stuff in between the
	validation and the redraw which is higher priority than the
	validation.

2001-03-07  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkentry.c (gtk_entry_get_property): remove trailer
	(gtk_entry_set_property): remove trailer

	* gtk/gtkentry.c (gtk_entry_set_width_chars): 
	(gtk_entry_get_width_chars): new functions, to set size request to 
	a given number of characters

	* gtk/testgtk.c (create_dialog): beef up the dialog test slightly

	* gtk/gtkdialog.c (gtk_dialog_set_has_separator): new function
	(gtk_dialog_get_has_separator): new function
        (run_delete_handler): fix to not emit "response" signal
	because we already did in the delete event handler installed
	at dialog creation time.
	
	* gtk/gtkdialog.h: add a has_separator property,
	add GTK_DIALOG_NO_SEPARATOR flag

2001-03-07  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkwindow.c (gtk_window_set_decorated): new function, turns
	off decorations for a window.

	* demos/gtk-demo/button_box.c (create_bbox): adapt to button box
	changes

	* gtk/gtklabel.c (gtk_label_get_layout_offsets): new function 